@@ -58,11 +58,20 @@ SRCFILES_ORIGPLACE = $(wildcard $(top_srcdir)/src/*.c) \
 	$(wildcard $(top_srcdir)/src/*.pmt) \
 	$(YFILES:.y=.c) $(YFILES:.y=.h) $(LFILES:.l=.c)
 
-SRCFILES = $(patsubst $(top_srcdir)/src/%,igraph/src/%,$(SRCFILES_ORIGPLACE))
+SRCFILES_ORIGPLACE2 = 	$(wildcard $(top_srcdir)/src/arpack/*.f) \
+	$(wildcard $(top_srcdir)/src/arpack/*.h)
+
+SRCFILES_ORIGPLACE3 = 	$(wildcard $(top_srcdir)/src/lapack/*.f) \
+	$(wildcard $(top_srcdir)/src/lapack/*.c)
+
+SRCFILES_ORIGPLACE4 = 	$(wildcard $(top_srcdir)/src/blas/*.f)
+
+SRCFILES = $(patsubst $(top_srcdir)/src/%,igraph/src/%,$(SRCFILES_ORIGPLACE)) \
+	$(patsubst $(top_srcdir)/src/arpack/%,igraph/src/%,$(SRCFILES_ORIGPLACE2)) \
+	$(patsubst $(top_srcdir)/src/lapack/%,igraph/src/%,$(SRCFILES_ORIGPLACE3)) \
+	$(patsubst $(top_srcdir)/src/blas/%,igraph/src/%,$(SRCFILES_ORIGPLACE4))
 
 igraph/src/%.c: $(top_srcdir)/src/%.c
-	cp $(top_srcdir)/src/$(@F) $@
-igraph/src/%.h: $(top_srcdir)/src/%.h
 	cp $(top_srcdir)/src/$(@F) $@
 igraph/src/%.cc: $(top_srcdir)/src/%.cc
 	cp $(top_srcdir)/src/$(@F) $@
@@ -73,6 +82,21 @@ igraph/src/%.cpp: $(top_srcdir)/src/%.cpp
 igraph/src/%.pmt: $(top_srcdir)/src/%.pmt
 	cp $(top_srcdir)/src/$(@F) $@
 
+igraph/src/%.f: $(top_srcdir)/src/arpack/%.f
+	cp $(top_srcdir)/src/arpack/$(@F) igraph/src/$(@F)
+# 	cat $(top_srcdir)/src/arpack/$(@F) | \
+#         sed 's/igraph//g' | sed 's/IGRAPH//g' > igraph/src/$(@F)
+igraph/src/%.f: $(top_srcdir)/src/lapack/%.f
+	cp $(top_srcdir)/src/lapack/$(@F) igraph/src/$(@F)
+igraph/src/%.c: $(top_srcdir)/src/lapack/%.c
+	cp $(top_srcdir)/src/lapack/$(@F) igraph/src/$(@F)
+igraph/src/%.f: $(top_srcdir)/src/blas/%.f
+	cp $(top_srcdir)/src/blas/$(@F) igraph/src/$(@F)
+
+igraph/src/%.h: $(top_srcdir)/src/arpack/%.h
+	cp $(top_srcdir)/src/arpack/$(@F) igraph/src/$(@F)
+igraph/src/%.h: $(top_srcdir)/src/%.h
+	cp $(top_srcdir)/src/$(@F) $@
 
 igraph_$(VERSION).tar.gz: $(RFILES) $(SRCFILES)
 	rm -f igraph/R/config.R
