@@ -2,6 +2,8 @@ AC_INIT(igraph, @VERSION@, csardi@rmki.kfki.hu)
 AC_CONFIG_SRCDIR(src/rinterface.c)
 
 AC_PROG_CC
+AC_PROG_CXX
+AC_PROG_F77
 
 AC_CHECK_FUNCS(fmemopen, [HAVE_FMEMOPEN=1], [HAVE_FMEMOPEN=0])
 AC_SUBST(HAVE_FMEMOPEN)
