@@ -1,2 +1,8 @@
 PKG_CFLAGS=-DUSING_R -I. @CPPFLAGS@ @CFLAGS@ -DPACKAGE_VERSION=@PACKAGE_VERSION@
-PKG_LIBS=@XML2_LIBS@ @GMP_LIBS@
+PKG_CXXFLAGS= -DUSING_R
+PKG_LIBS=@XML2_LIBS@ @GMP_LIBS@ $(LAPACK_LIBS)
+
+all: $(SHLIB)
+
+%.o: %.f
+	f77 -g -O1 -c $< -fpic -o $@
