@@ -1,3 +1,9 @@
+2007-10-22  Gabor Csardi  <csardi@rmki.kfki.hu>
+	
+	* src/examples/eigenvector_centrality.c : updated
+
+	* src/arpack.c (igraph_eigenvector_centrality) : many improvements
+
 2007-10-21  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/arpack.c (igraph_eigenvector_centrality) : evcent calculation
